Sort out write to Static, from Find Bugs Replace new Integer, with Integer.vlaueOf. Removes un-used store. Resolve issues found with FindBugs relating to instance creations